[tool.poetry]
name = "hv4gha"
version = "0.2.3"
description = "Use HashiCorp Vault to manage a GitHub App's private RSA key."
authors = ["Andreas Olsson <andreas@arrakis.se>"]
repository = "https://github.com/andreaso/hv4gha"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
certifi = ">=2024.7.4"
cryptography = ">=43.0.1"
requests = "^2.31.0"
pydantic = "^2.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
types-requests = "^2.31.0.20240406"
pytest = "^8.2.0"
ruff = "^0.4.2"

[tool.ruff]
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
