[project]
name = "hv4gha"
version = "0.3.0"
description = "Use HashiCorp Vault to manage a GitHub App's private RSA key."
authors = [{name = "Andreas Olsson", email = "andreas@arrakis.se"}]
dependencies = [
  "certifi (>=2024.12.14)",
  "cryptography (>=43.0.1)",
  "requests (>=2.31.0,<3)",
  "pydantic (>=2.8.0,<3)",
]
requires-python = ">=3.10, <3.14"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
]

[project.urls]
repository = "https://github.com/andreaso/hv4gha"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
types-requests = "^2.31.0.20240406"
pytest = "^8.3.4"
ruff = "^0.8.6"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E", "W",
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # flake8-unused-arguments
  "ARG",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
