[project]
name = "hv4gha"
version = "0.4.0"
description = "Use HashiCorp Vault to manage a GitHub App's private RSA key."
authors = [{name = "Andreas Olsson", email = "andreas@arrakis.se"}]
dependencies = [
  "certifi (>=2024.12.14)",
  "cryptography (>=43.0.1)",
  "requests (>=2.31.0,<3)",
  "pydantic (>=2.12.0,<3)",
]
requires-python = ">=3.10, <3.15"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
repository = "https://github.com/andreaso/hv4gha"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
types-requests = "^2.31.0.20240406"
pytest = "^8.4.2"
ruff = "^0.14.0"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E", "W",
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # flake8-unused-arguments
  "ARG",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
